--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -398,9 +398,9 @@
         # http://linked.data.gov.au/def/phs
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/phs(.*)$                            https://raw.githack.com/F3RR3T/PlantHealthSurveillanceOntology/master/phs.ttl? [R=302,L]
-        RewriteRule ^/def/phs(.*).ttl$                        https://raw.githack.com/F3RR3T/PlantHealthSurveillanceOntology/master/phs.ttl [R=302,L]
-        RewriteRule ^/def/phs(.*)$                            https://raw.githack.com/F3RR3T/PlantHealthSurveillanceOntology/master/phs.html$1 [R=302,L]
+        RewriteRule ^/def/phs(.*)$                            https://raw.githack.com/AGLDWG/phs-ont/master/phs.ttl? [R=302,L]
+        RewriteRule ^/def/phs(.*).ttl$                        https://raw.githack.com/AGLDWG/phs-ont/master/phs.ttl [R=302,L]
+        RewriteRule ^/def/phs(.*)$                            https://raw.githack.com/AGLDWG/phs-ont/master/phs.html$1 [R=302,L]
 
         # http://linked.data.gov.au/def/placenames
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
@@ -577,6 +577,11 @@
         RewriteRule ^/def/seismic-sampling-method/?$            https://vocabs.gsq.digital/vocabulary/seismic-sampling-method [R=302,L]
         RewriteRule ^/def/seismic-sampling-method(.*)$          https://vocabs.gsq.digital/object?vocab_id=seismic-sampling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
+        # Vocab: Site Relationships
+        # http://linked.data.gov.au/def/site-relationships
+        RewriteRule ^/def/site-relationships/?$                 https://vocabs.gsq.digital/vocabulary/site-relationships [R=302,L]
+        RewriteRule ^/def/site-relationships(.*)$               https://vocabs.gsq.digital/object?vocab_id=site-relationships&uri=http://%{SERVER_NAM$
+
         # Vocab: Spatial Region
         # http://linked.data.gov.au/def/spatial-region
         RewriteRule ^/def/spatial-region/?$                     https://vocabs.gsq.digital/vocabulary/spatial-region [R=302,L]
