--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -418,6 +418,15 @@
         RewriteRule ^/def/plot(.*).ttl$                         https://raw.githack.com/ternaustralia/ontology_tern-plot/master/docs/tern-plot.ttl [R=303,L]
         RewriteRule ^/def/plot(.*)$                             https://ternaustralia.github.io/ontology_tern-plot/ [R=303,L]
 
+        # http://linked.data.gov.au/def/project
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/project(.*)$                       https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl? [R=302,L]
+        RewriteRule ^/def/project.ttl$                       https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl [R=302,L]
+        RewriteRule ^/def/project/?$                         https://dr-shorthair.github.io/project-ont/docs/ [R=302,L]    
+        RewriteMap tolower int:tolower
+        RewriteRule ^/def/project/(.*)$                      https://dr-shorthair.github.io/project-ont/docs/\#${tolower:$1} [R=302,L,NE]
+
         #
         #	Vocabularies
         #
