LetsEncrypt redirect to HTTPS

--- a/conf/0-linked.data.gov.au.conf
+++ b/conf/0-linked.data.gov.au.conf
@@ -661,4 +661,6 @@
 	# final 404 rule
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteRule (.*) /404.html [L]
+RewriteCond %{SERVER_NAME} =linked.data.gov.au
+RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </VirtualHost>
