/def/auspix added

--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -274,6 +274,13 @@
         RewriteRule ^/def/asgs/cat(.*)$                         https://raw.githack.com/AGLDWG/asgs-ont/master/asgs-cat.html$1 [R=302,L]
         RewriteRule ^/def/asgs/id(.*)$                          https://raw.githack.com/AGLDWG/asgs-ont/master/asgs-id.html$1 [R=302,L]
 
+        # http://linked.data.gov.au/def/auspix
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/auspix(.*)$                             https://raw.githack.com/GeoscienceAustralia/AusPIX-DGGS-ontology/master/auspix.ttl? [R=302,L]
+        RewriteRule ^/def/auspix(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/AusPIX-DGGS-ontology/master/auspix.ttl [R=302,L]
+        RewriteRule ^/def/auspix(.*)$                             https://raw.githack.com/GeoscienceAustralia/AusPIX-DGGS-ontology/master/auspix.html$1 [R=302,L]
+
         # CRS Th - must occur before CRS ont else pattern clash
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -391,7 +398,7 @@
         # http://linked.data.gov.au/def/phs
         RewriteCond %{QUERY_STRING} _profile=prof [OR]
         RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/dx-prof/ [OR]
-        RewriteCond %{HTTP:Accept-Profile} <https://www.w3.org/TR/dx-prof/>
+        RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/dx-prof/\>
         RewriteRule ^/def/phs(.*)$			      https://raw.githubusercontent.com/AGLDWG/phs-ont/master/alignments/profiles.ttl [R=302,L]
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
