--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -612,8 +612,8 @@
     
         # Vocab: Temporal Reference System
         # http://linked.data.gov.au/def/trs
-# 	RewriteCond %{HTTP:Accept} text/turtle [NC]
-# 	RewriteRule ^/def/trs(.*)$				https://vocabs.gsq.digital/object?vocab_id=trs&uri=http://%{SERVER_NAME}%{REQUEST_URI}&_mediatype=text/turtle [R=302,NE,L]
+#	RewriteCond %{HTTP:Accept} text/turtle [NC]
+#	RewriteRule ^/def/trs(.*)$				https://vocabs.gsq.digital/object?vocab_id=trs&uri=http://%{SERVER_NAME}%{REQUEST_URI}&_mediatype=text/turtle [R=302,NE,L]
         RewriteRule ^/def/trs/?$				https://vocabs.gsq.digital/vocabulary/trs [R=302,L]
         RewriteRule ^/def/trs(.*)$				https://vocabs.gsq.digital/object?vocab_id=trs&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
     
@@ -633,7 +633,7 @@
 
         RewriteRule ^/dataset/mb16mb11				https://github.com/CSIRO-enviro-informatics/mb16mb11-linkset [L,R=302]	
         RewriteRule ^/dataset/mb16cc				https://github.com/CSIRO-enviro-informatics/mb16cc-linkset [L,R=302]
- 	RewriteRule ^/dataset/addr1605mb11			https://github.com/CSIRO-enviro-informatics/addr1605mb11-linkset [L,R=302]
+	RewriteRule ^/dataset/addr1605mb11			https://github.com/CSIRO-enviro-informatics/addr1605mb11-linkset [L,R=302]
         RewriteRule ^/dataset/addr1605mb16			https://github.com/CSIRO-enviro-informatics/addr1605mb16-linkset [L,R=302]
         RewriteRule ^/dataset/addrmb11				https://github.com/CSIRO-enviro-informatics/addrmb11-linkset [L,R=302]
         RewriteRule ^/dataset/addrmb16				https://github.com/CSIRO-enviro-informatics/addrmb16-linkset [L,R=302]
@@ -659,8 +659,9 @@
 	RewriteRule ^/(governance|assistance|showcase|events|groups|howto|contact|join)$                                        http://www.linked.data.gov.au/$1 [L,R=302]
 
 	# final 404 rule
+	ErrorDocument 404 http://203.100.30.55/404.html
 	RewriteCond %{REQUEST_FILENAME} !-f
-	RewriteRule (.*) /404.html [L]
+	RewriteRule (.*) - [R=404]  # L included by default for 300 < R > 399
 
         # Let's Encrypt Certificate details
         SSLCertificateFile /etc/letsencrypt/live/linked.data.gov.au/fullchain.pem
