--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -281,6 +281,16 @@
         RewriteRule ^/def/auspix(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/AusPIX-DGGS-ontology/master/auspix.ttl [R=302,L]
         RewriteRule ^/def/auspix(.*)$                             https://raw.githack.com/GeoscienceAustralia/AusPIX-DGGS-ontology/master/auspix.html$1 [R=302,L]
 
+        # http://linked.data.gov.au/def/borehole
+        # all requests for RDF (tutle) just go to the single RDF file
+        # requests for .../borehole/... go to .../borehole#...
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/borehole(.*)$                         https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/borehole.ttl? [R=302,L]
+        RewriteRule ^/def/borehole(.*).ttl$                     https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/borehole.ttl [R=302,L]
+        RewriteRule ^/def/borehole(.*)$                         https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/borehole.html$1 [R=302,L]
+    
+
         # CRS Th - must occur before CRS ont else pattern clash
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -439,11 +449,13 @@
 	RewriteRule ^/def/tern-cv/$                             http://linkeddata.tern.org.au/viewer/tern/vocabulary/ [R=302,L]
 	RewriteRule ^/def/tern-cv(.*)$                          http://linkeddata.tern.org.au/viewer/tern/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
 
-        # Vocab: Australian States & Territories
-        # http://linked.data.gov.au/def/australian-states-and-territories
-        RewriteRule ^/def/australian-states-and-territories/?$      https://vocabs.gsq.digital/vocabulary/australian-states-and-territories [R=302,L]
-        RewriteRule ^/def/australian-states-and-territories(.*)$    https://vocabs.gsq.digital/object?vocab_id=australian-states-and-territories&uri=http://%{SERVER_NAME}%{R$
-
+        # Multiple Vocabs: TERN's CorVeg
+        # http://linked.data.gov.au/def/corveg-cv
+        RewriteRule ^/def/corveg-cv$                            http://linkeddata.tern.org.au/viewer/corveg [R=302,L]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/corveg-cv(.*)                         http://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1?_format=text/turtle [R=302,L]	
+        RewriteRule ^/def/corveg-cv(.*)                         http://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1 [R=302,L]
+    
         # http://linked.data.gov.au/def/gba
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -459,7 +471,6 @@
         RewriteRule ^/def/gba(.*).rdf$                          http://registry.it.csiro.au/def/gba$1?_format=rdf [R=302,L]        
         RewriteRule ^/def/gba(.*)$                              http://registry.it.csiro.au/def/gba$1 [R=302,L]
 
-
         # http://linked.data.gov.au/def/reg-status
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -468,155 +479,13 @@
         RewriteRule ^/def/reg-status/?$                         https://raw.githack.com/AGLDWG/reg-status/master/index.html [R=302,L]
         RewriteRule ^/def/reg-status(.*)$                       https://raw.githack.com/AGLDWG/reg-status/master$1.html [R=302,L]
 
-        # Vocab: Data Access Rights
-        # http://linked.data.gov.au/def/data-access-rights
-        RewriteRule ^/def/data-access-rights/?$                https://vocabs.gsq.digital/vocabulary/data-access-rights [R=302,L]
-        RewriteRule ^/def/data-access-rights(.*)$              https://vocabs.gsq.digital/object?vocab_id=data-access-rights&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+        # GSQ Vocabs
+        #   RewriteRule ^/def/georesource-report/?$                 https://vocabs.gsq.digital/vocabulary/georesource-report [R=302,L]
+        #   RewriteRule ^/def/georesource-report(.*)$               https://vocabs.gsq.digital/object?vocab_id=georesource-report&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
+        RewriteRule ^/def/(address-type|australian-phone-area-codes|australian-states-and-territories|borehole-design|borehole-drilling-method|borehole-purpose|borehole-start-point|borehole-status-event|borehole-sub-purpose|data-access-rights|dataciteroles|depth-reference|earth-science-data-category|geo-commodities|geoadminfeatures|geofeatures|geological-observation-instrument|geological-observation-method|geological-observation-type|geological-sites|geometry-roles|georesource-report|gsq-alias|gsq-dataset-theme|gsq-roles|gsq-sample-facility|party-identifier-type|iso19115-1\/RoleCode|minerals|observation-detail-type|organisation-activity-status|organisation-name-types|organisation-type|party-relationship|queensland-crs|qld-resource-permit-status|qld-resource-permit|qld-utm-zones|geou|iso11179-6/RolesAndResponsibilities|report-detail-type|report-status|resource-project-lifecycle|result-type|sample-detail-type|sample-location-status|sample-location-types|sample-material|sample-preparation-methods|sample-relationship|sample-type|seismic-dimensionality|seismic-sampling-method|site-detail-type|site-relationships|site-status|survey-detail-type|survey-method|survey-relationship-type|survey-status|survey-type|telephone-type|trs)/?$ https://vocabs.gsq.digital/vocabulary/$1 [R=302,L]
+        RewriteRule ^/def/(address-type|australian-phone-area-codes|australian-states-and-territories|borehole-design|borehole-drilling-method|borehole-purpose|borehole-start-point|borehole-status-event|borehole-sub-purpose|data-access-rights|dataciteroles|depth-reference|earth-science-data-category|geo-commodities|geoadminfeatures|geofeatures|geological-observation-instrument|geological-observation-method|geological-observation-type|geological-sites|geometry-roles|georesource-report|gsq-alias|gsq-dataset-theme|gsq-roles|gsq-sample-facility|party-identifier-type|iso19115-1\/RoleCode|minerals|observation-detail-type|organisation-activity-status|organisation-name-types|organisation-type|party-relationship|queensland-crs|qld-resource-permit-status|qld-resource-permit|qld-utm-zones|geou|iso11179-6/RolesAndResponsibilities|report-detail-type|report-status|resource-project-lifecycle|result-type|sample-detail-type|sample-location-status|sample-location-types|sample-material|sample-preparation-methods|sample-relationship|sample-type|seismic-dimensionality|seismic-sampling-method|site-detail-type|site-relationships|site-status|survey-detail-type|survey-method|survey-relationship-type|survey-status|survey-type|telephone-type|trs)(.*)$ https://vocabs.gsq.digital/object?vocab_id=$1&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
+    
 
-        # Vocab: Borehole Drilling Method
-        # http://linked.data.gov.au/def/borehole-drilling-method
-        RewriteRule ^/def/borehole-drilling-method/?$               https://vocabs.gsq.digital/vocabulary/borehole-drilling-method [R=302,L]
-        RewriteRule ^/def/borehole-drilling-method(.*)$             https://vocabs.gsq.digital/object?vocab_id=borehole-drilling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
-
-        # Vocab: Borehole Inclination
-        # http://linked.data.gov.au/def/borehole-inclination
-        RewriteRule ^/def/borehole-inclination/?$               https://vocabs.gsq.digital/vocabulary/borehole-inclination [R=302,L]
-        RewriteRule ^/def/borehole-inclination(.*)$             https://vocabs.gsq.digital/object?vocab_id=borehole-inclination&uri=http://%{SERVER_NAME}%{REQUEST_UR$
-    
-        # Vocab: Borehole Surface Circumstance
-        # http://linked.data.gov.au/def/borehole-surface-circumstance
-        RewriteRule ^/def/borehole-surface-circumstance/?$      https://vocabs.gsq.digital/vocabulary/borehole-surface-circumstance [R=302,L]
-        RewriteRule ^/def/borehole-surface-circumstance(.*)$    https://vocabs.gsq.digital/object?vocab_id=borehole-surface-circumstance&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
-
-        # Vocab: Borehole Status
-        # http://linked.data.gov.au/def/borehole-status
-        RewriteRule ^/def/borehole-status/?$                    https://vocabs.gsq.digital/vocabulary/borehole-status [R=302,L]
-        RewriteRule ^/def/borehole-status(.*)$                  https://vocabs.gsq.digital/object?vocab_id=borehole-status&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
-    
-        # Vocab: Borehole Type
-        # http://linked.data.gov.au/def/borehole-type
-        RewriteRule ^/def/borehole-type/?$                      https://vocabs.gsq.digital/vocabulary/borehole-type [R=302,L]
-        RewriteRule ^/def/borehole-type(.*)$                    https://vocabs.gsq.digital/object?vocab_id=borehole-type&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
-
-        # http://linked.data.gov.au/def/borehole
-        # all requests for RDF (tutle) just go to the single RDF file
-        # requests for .../borehole/... go to .../borehole#...
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/borehole(.*)$                         https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/borehole.ttl? [R=302,L]
-        RewriteRule ^/def/borehole(.*).ttl$                     https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/borehole.ttl [R=302,L]
-        RewriteRule ^/def/borehole(.*)$                         https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/borehole.html$1 [R=302,L]
-    
-        # Vocab: Data Access
-        # http://linked.data.gov.au/def/data-access
-        RewriteRule ^/def/data-access/?$                        https://vocabs.gsq.digital/vocabulary/data-access [R=302,L]
-        RewriteRule ^/def/data-access(.*)$                      https://vocabs.gsq.digital/object?vocab_id=data-access&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
-
-        # Vocab: Earth Science Data Category
-        # http://linked.data.gov.au/def/earth-science-data-category
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/earth-science-data-category(.*)$      https://vocabs.gsq.digital/object?vocab_id=earth-science-data-category&uri=http://%{SERVER_NAME}%{REQUEST_URI}&_format=text/turtle [R=302,NE,L]
-        RewriteRule ^/def/earth-science-data-category/?$        https://vocabs.gsq.digital/vocabulary/earth-science-data-category [R=302,L]
-        RewriteRule ^/def/earth-science-data-category(.*)$      https://vocabs.gsq.digital/object?vocab_id=earth-science-data-category&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-
-        # Vocab: Geochemistry Sampling Method
-        # http://linked.data.gov.au/def/geochemistry-sampling-method
-        RewriteRule ^/def/geochemistry-sampling-method/?$       https://vocabs.gsq.digital/vocabulary/geochemistry-sampling-method [R=302,L]
-        RewriteRule ^/def/geochemistry-sampling-method(.*)$     https://vocabs.gsq.digital/object?vocab_id=geochemistry-sampling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-    
-        # Vocab: Georesource Report Type
-        # http://linked.data.gov.au/def/geophysical-survey
-        RewriteRule ^/def/georesource-report/?$                 https://vocabs.gsq.digital/vocabulary/georesource-report [R=302,L]
-        RewriteRule ^/def/georesource-report(.*)$               https://vocabs.gsq.digital/object?vocab_id=georesource-report&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-
-        # Vocab: Geophysical Survey
-        # http://linked.data.gov.au/def/geophysical-survey
-        RewriteRule ^/def/geophysical-survey/?$                 https://vocabs.gsq.digital/vocabulary/geophysical-survey [R=302,L]
-        RewriteRule ^/def/geophysical-survey(.*)$               https://vocabs.gsq.digital/object?vocab_id=geophysical-survey&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-
-        # Vocab: Geoscience Feature of Interest
-        # http://linked.data.gov.au/def/geoscience-foi
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/geoscience-foi(.*)$                   https://vocabs.gsq.digital/object?vocab_id=geoscience-feature-of-interest&uri=http://%{SERVER_NAME}%{REQUEST_URI}&_format=text/turtle [R=302,NE,L]
-        RewriteRule ^/def/geoscience-foi/?$                     https://vocabs.gsq.digital/vocabulary/geoscience-feature-of-interest [R=302,L]
-        RewriteRule ^/def/geoscience-foi(.*)$                   https://vocabs.gsq.digital/object?vocab_id=geoscience-feature-of-interest&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-
-        # Vocab: GSQ Commodity Code
-        # http://linked.data.gov.au/def/gsq-commodity-code
-        RewriteRule ^/def/gsq-commodity-code/?$                 https://vocabs.gsq.digital/vocabulary/gsq-commodity-code [R=302,L]
-        RewriteRule ^/def/gsq-commodity-code(.*)$               https://vocabs.gsq.digital/object?vocab_id=gsq-commodity-code&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-
-        # Vocab: GSQ Dataset Theme
-        # http://linked.data.gov.au/def/gsq-dataset-theme
-        RewriteRule ^/def/gsq-dataset-theme/?$                  https://vocabs.gsq.digital/vocabulary/gsq-dataset-theme [R=302,L]
-        RewriteRule ^/def/gsq-dataset-theme(.*)$                https://vocabs.gsq.digital/object?vocab_id=gsq-dataset-theme&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-
-        # Vocab: GSQ Lithology
-        # http://linked.data.gov.au/def/gsq-lithology
-        RewriteRule ^/def/gsq-lithology/?$                      https://vocabs.gsq.digital/vocabulary/gsq-lithology [R=302,L]
-        RewriteRule ^/def/gsq-lithology(.*)$                    https://vocabs.gsq.digital/object?vocab_id=gsq-lithology&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-    
-        # Vocab: Mining Industry Report
-        # http://linked.data.gov.au/def/mining-industry-report
-        RewriteRule ^/def/mining-industry-report/?$             https://vocabs.gsq.digital/vocabulary/mining-industry-report [R=302,L]
-        RewriteRule ^/def/mining-industry-report(.*)$           https://vocabs.gsq.digital/object?vocab_id=mining-industry-report&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-    
-        # Vocab: Queensland Mining Permit
-        # http://linked.data.gov.au/def/qld-mining-permit
-        RewriteRule ^/def/qld-mining-permit/?$                  https://vocabs.gsq.digital/vocabulary/qld-mining-permit [R=302,L]
-        RewriteRule ^/def/qld-mining-permit(.*)$                https://vocabs.gsq.digital/object?vocab_id=qld-mining-permit&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-    
-        # Vocab: Mining Sample
-        # http://linked.data.gov.au/def/mining-sample
-        RewriteRule ^/def/mining-sample/?$                      https://vocabs.gsq.digital/vocabulary/mining-sample [R=302,L]
-        RewriteRule ^/def/mining-sample(.*)$                    https://vocabs.gsq.digital/object?vocab_id=mining-sample&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-    
-        # Vocab: Mining Survey Status
-        # http://linked.data.gov.au/def/mining-survey-status
-        RewriteRule ^/def/mining-survey-status/?$               https://vocabs.gsq.digital/vocabulary/mining-survey-status [R=302,L]
-        RewriteRule ^/def/mining-survey-status(.*)$             https://vocabs.gsq.digital/object?vocab_id=mining-survey-status&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-
-        # Vocab: ISO19115-1 CI_RoleCode Codelist
-        # http://linked.data.gov.au/def/iso19115-1/RoleCode
-        RewriteRule ^/def/iso19115-1/RoleCode/?$                https://vocabs.gsq.digital/vocabulary/RoleCode [R=302,L]
-        RewriteRule ^/def/iso19115-1/RoleCode(.*)$              https://vocabs.gsq.digital/object?vocab_id=RoleCode&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-    
-        # Vocab: Sampling Method
-        # http://linked.data.gov.au/def/sampling-method
-        RewriteRule ^/def/sampling-method/?$                    https://vocabs.gsq.digital/vocabulary/sampling-method [R=302,L]
-        RewriteRule ^/def/sampling-method(.*)$                  https://vocabs.gsq.digital/object?vocab_id=sampling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-    
-        # Vocab: Seismic Sampling Method
-        # http://linked.data.gov.au/def/seismic-sampling-method
-        RewriteRule ^/def/seismic-sampling-method/?$            https://vocabs.gsq.digital/vocabulary/seismic-sampling-method [R=302,L]
-        RewriteRule ^/def/seismic-sampling-method(.*)$          https://vocabs.gsq.digital/object?vocab_id=seismic-sampling-method&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-    
-        # Vocab: Site Relationships
-        # http://linked.data.gov.au/def/site-relationships
-        RewriteRule ^/def/site-relationships/?$                 https://vocabs.gsq.digital/vocabulary/site-relationships [R=302,L]
-        RewriteRule ^/def/site-relationships(.*)$               https://vocabs.gsq.digital/object?vocab_id=site-relationships&uri=http://%{SERVER_NAM$
-
-        # Vocab: Spatial Region
-        # http://linked.data.gov.au/def/spatial-region
-        RewriteRule ^/def/spatial-region/?$                     https://vocabs.gsq.digital/vocabulary/spatial-region [R=302,L]
-        RewriteRule ^/def/spatial-region(.*)$                   https://vocabs.gsq.digital/object?vocab_id=spatial-region&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-    
-        # Multiple Vocabs: TERN's CorVeg
-        # http://linked.data.gov.au/def/corveg-cv
-        RewriteRule ^/def/corveg-cv$                            http://linkeddata.tern.org.au/viewer/corveg [R=302,L]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/corveg-cv(.*)                         http://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1?_format=text/turtle [R=302,L]	
-        RewriteRule ^/def/corveg-cv(.*)                         http://linkeddata.tern.org.au/viewer/corveg/id/http://linked.data.gov.au/def/corveg-cv$1 [R=302,L]
-    
-        # Vocab: Temporal Reference System
-        # http://linked.data.gov.au/def/trs
-#	RewriteCond %{HTTP:Accept} text/turtle [NC]
-#	RewriteRule ^/def/trs(.*)$				https://vocabs.gsq.digital/object?vocab_id=trs&uri=http://%{SERVER_NAME}%{REQUEST_URI}&_mediatype=text/turtle [R=302,NE,L]
-        RewriteRule ^/def/trs/?$				https://vocabs.gsq.digital/vocabulary/trs [R=302,L]
-        RewriteRule ^/def/trs(.*)$				https://vocabs.gsq.digital/object?vocab_id=trs&uri=http://%{SERVER_NAME}%{REQUEST_URI} [R=302,NE,L]
-    
         # Linksets
 
         # AGIFT / CRS Th
@@ -658,7 +527,7 @@
 	RewriteRule ^/?$					http://www.linked.data.gov.au/ [L,R=302]
 	RewriteRule ^/(governance|assistance|showcase|events|groups|howto|contact|join)$                                        http://www.linked.data.gov.au/$1 [L,R=302]
 
-	# final 404 rule
+	# final 404 rule for non-existent PID
 	ErrorDocument 404 http://203.100.30.55/404.html
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteRule (.*) - [R=404]  # L included by default for 300 < R > 399
