updated GSQ's vocs that are also onts

--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -330,6 +330,34 @@
 	# http://linked.data.gov.au/def/geofeatures
 	include /etc/apache2/sites-available/def-geofeatures.conf
 
+        # http://linked.data.gov.au/def/geoqk
+        RewriteCond %{QUERY_STRING} ^_profile=owl$ [OR]
+        RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/owl2-rdf-based-semantics/ [OR]
+        RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/owl2-rdf-based-semantics/\>
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geoqk(.*)$                             https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geoqks.ttl? [R=302,L]
+        RewriteRule ^/def/geoqk(.*).ttl$                         https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geoqks.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_profile=owl$ [OR]
+        RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/owl2-rdf-based-semantics/ [OR]
+        RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/owl2-rdf-based-semantics/\>
+        RewriteRule ^/def/geoqk(.*)$                             https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geoqks.html$1 [R=302,L]
+        RewriteRule ^/def/geoqk(.*)$                             https://vocabs.gsq.digital/vocabulary/geoqk [R=302,L]
+
+        # http://linked.data.gov.au/def/geou
+        RewriteCond %{QUERY_STRING} ^_profile=owl$ [OR]
+        RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/owl2-rdf-based-semantics/ [OR]
+        RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/owl2-rdf-based-semantics/\>
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geou(.*)$                             https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geounits.ttl? [R=302,L]
+        RewriteRule ^/def/geou(.*).ttl$                         https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geounits.ttl [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_profile=owl$ [OR]
+        RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/owl2-rdf-based-semantics/ [OR]
+        RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/owl2-rdf-based-semantics/\>
+	RewriteRule ^/def/geou(.*)$                             https://raw.githack.com/geological-survey-of-queensland/qudt-geo-profile/master/geounits.html$1 [R=302,L]
+        RewriteRule ^/def/geou(.*)$                             https://vocabs.gsq.digital/vocabulary/geou [R=302,L]
+
         # http://linked.data.gov.au/def/geox
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
