Add redirect for http://linked.data.gov.au/dataset/ausplots and http://linked.data.gov.au/dataset/corveg

--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -219,6 +219,68 @@
         RewriteRule ^/dataset/placenames/(.*)$                    http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/placenames/(.*).ttl$                http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1?_format=text/turtle [R=302,L]
         RewriteRule ^/dataset/placenames/(.*)$                    http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1 [R=302,L]
+
+        # http://linked.data.gov.au/dataset/ausplots
+        # Turtle
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^\/dataset\/ausplots\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle
+        RewriteRule ^\/dataset\/ausplots\/(.+).ttl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle
+        # RDF/XML
+        RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
+        RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
+        RewriteRule ^\/dataset\/ausplots\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml
+        RewriteRule ^\/dataset\/ausplots\/(.+).rdf$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml
+        # N-Triples
+        RewriteCond %{QUERY_STRING} ^_format=application/n-triples$ [OR]
+        RewriteCond %{HTTP:Accept} application/n-triples [NC]
+        RewriteRule ^\/dataset\/ausplots\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples
+        RewriteRule ^\/dataset\/ausplots\/(.+).nt$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples
+        # JSON-LD
+        RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
+        RewriteCond %{HTTP:Accept} application/ld\+json [NC]
+        RewriteRule ^\/dataset\/ausplots\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json
+        RewriteRule ^\/dataset\/ausplots\/(.+).jsonld$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json
+        # Notation3
+        RewriteCond %{QUERY_STRING} ^_format=text/n3$ [OR]
+        RewriteCond %{HTTP:Accept} text/n3 [NC]
+        RewriteRule ^\/dataset\/ausplots\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3
+        RewriteRule ^\/dataset\/ausplots\/(.+).n3$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3
+        # .owl file extension
+        RewriteRule ^\/dataset\/ausplots\/(.+).owl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle
+        # HTML
+        RewriteRule ^\/dataset\/ausplots\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots
+
+        # http://linked.data.gov.au/dataset/corveg
+        # Turtle
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle
+        RewriteRule ^\/dataset\/corveg\/(.+).ttl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle
+        # RDF/XML
+        RewriteCond %{QUERY_STRING} ^_format=application/rdf\+xml$ [OR]
+        RewriteCond %{HTTP:Accept} application/rdf\+xml [NC]
+        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml
+        RewriteRule ^\/dataset\/corveg\/(.+).rdf$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/rdf+xml
+        # N-Triples
+        RewriteCond %{QUERY_STRING} ^_format=application/n-triples$ [OR]
+        RewriteCond %{HTTP:Accept} application/n-triples [NC]
+        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples
+        RewriteRule ^\/dataset\/corveg\/(.+).nt$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/n-triples
+        # JSON-LD
+        RewriteCond %{QUERY_STRING} ^_format=application/ld\+json$ [OR]
+        RewriteCond %{HTTP:Accept} application/ld\+json [NC]
+        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json
+        RewriteRule ^\/dataset\/corveg\/(.+).jsonld$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=application/ld+json
+        # Notation3
+        RewriteCond %{QUERY_STRING} ^_format=text/n3$ [OR]
+        RewriteCond %{HTTP:Accept} text/n3 [NC]
+        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3
+        RewriteRule ^\/dataset\/corveg\/(.+).n3$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/n3
+        # .owl file extension
+        RewriteRule ^\/dataset\/corveg\/(.+).owl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle
+        # HTML
+        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots
         
         #
         #	Ontologies
