AGOP, GA SKOS Profile

--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -224,6 +224,13 @@
         #	Ontologies
         #
 
+        # http://linked.data.gov.au/def/agop
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/agop(.*)$                            https://raw.githack.com/AGLDWG/agop/master/profile.ttl? [R=302,L]
+        RewriteRule ^/def/agop(.*).ttl$                        https://raw.githack.com/AGLDWG/agop/master/profile.ttl [R=302,L]
+        RewriteRule ^/def/agop(.*)$                            https://github.com/AGLDWG/agop [R=302,L]
+
         # http://linked.data.gov.au/def/agrif
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -326,6 +333,14 @@
         RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.ttl? [R=302,L]
         RewriteRule ^/def/fsdf(.*).ttl$                         https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.ttl [R=302,L]
         RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.html$1 [R=302,L]
+
+	# GA's SKOS Profile
+        RewriteRule /def/ga-skos/invalid.1.ttl			https://raw.githack.com/surroundaustralia/ga-skos-profile/master/examples/invalid.1.ttl [R=302,L]
+        RewriteRule /def/ga-skos/invalid.2.ttl			https://raw.githack.com/surroundaustralia/ga-skos-profile/master/examples/invalid.2.ttl [R=302,L]
+        RewriteRule /def/ga-skos/valid.ttl			https://raw.githack.com/surroundaustralia/ga-skos-profile/master/examples/valid.ttl [R=302,L]
+	RewriteRule /def/ga-skos/validation.ttl			https://raw.githack.com/surroundaustralia/ga-skos-profile/master/validation.ttl [R=302,L]
+	RewriteRule /def/ga-skos/specification.html		https://raw.githack.com/surroundaustralia/ga-skos-profile/master/specification.html [R=302,L]
+	RewriteRule /def/ga-skos$				https://raw.githack.com/surroundaustralia/ga-skos-profile/master/ga-skos.html [R=302,L]
 
 	# http://linked.data.gov.au/def/geofeatures
 	include /etc/apache2/sites-available/def-geofeatures.conf
