--- a/conf/www.linked.data.gov.au.conf
+++ b/conf/www.linked.data.gov.au.conf
@@ -9,6 +9,8 @@
 
         RewriteEngine  on
 
+	Redirect /guidelines https://github.com/AGLDWG/guidelines/blob/master/PID-URI-Guidelines-v2.0.md
+
 	RewriteRule ^/agrif-demo$ /agrif-demo/ [L,PT]
 	ProxyPreserveHost On
 	ProxyPass /agrif-demo/ http://203.101.224.217/agrif-demo/
