fix colliding borehole- patterns

--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -353,6 +353,13 @@
         # http://linked.data.gov.au/def/borehole
         # all requests for RDF (tutle) just go to the single RDF file
         # requests for .../borehole/... go to .../borehole#...
+	RewriteRule ^/def/borehole-design(.*)$                  https://vocabs.gsq.digital/vocabulary/borehole-design [R=302,L]
+	RewriteRule ^/def/borehole-drilling-method(.*)$         https://vocabs.gsq.digital/vocabulary/borehole-drilling-method [R=302,L]
+	RewriteRule ^/def/borehole-purpose(.*)$                 https://vocabs.gsq.digital/vocabulary/borehole-purpose [R=302,L]
+	RewriteRule ^/def/borehole-start-point(.*)$             https://vocabs.gsq.digital/vocabulary/borehole-start-point [R=302,L]
+	RewriteRule ^/def/borehole-status-event(.*)$            https://vocabs.gsq.digital/vocabulary/borehole-status-event [R=302,L]
+	RewriteRule ^/def/borehole-sub-purpose(.*)$             https://vocabs.gsq.digital/vocabulary/borehole-sub-purpose [R=302,L]
+
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
         RewriteRule ^/def/borehole(.*)$                         https://raw.githack.com/geological-survey-of-queensland/gsq-borehole-profile/master/borehole.ttl? [R=302,L]
