--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -202,23 +202,7 @@
 
         # http://linked.data.gov.au/dataset/placenames
         # Dataset
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/placenames$                         http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/index.ttl? [R=302,L]
-        RewriteRule ^/dataset/placenames.ttl$                     http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/index.ttl [R=302,L]
-        RewriteRule ^/dataset/placenames$                         http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/  [R=302,L]
-        # Top-level Registers
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/placenames/(.*)/$                   http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1/?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/placenames/(.*)/index.ttl$          http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1/?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/placenames/(.*)/$                   http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1/ [R=302,L]
-        # sub-dataset objects
-        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
-        RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/placenames/(.*)$                    http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/placenames/(.*).ttl$                http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1?_format=text/turtle [R=302,L]
-        RewriteRule ^/dataset/placenames/(.*)$                    http://ec2-52-63-73-113.ap-southeast-2.compute.amazonaws.com/placenames-dataset/$1 [R=302,L]
+	RewriteRule ^/dataset/placenames(.*)$ http://fsdf.org.au/placenames-dataset$1 [R=302,L]
 
         # http://linked.data.gov.au/dataset/ausplots
         # Turtle
@@ -550,6 +534,24 @@
         RewriteRule ^/def/project(.*)$                             https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl [R=303,L]
         RewriteRule ^/def/project(.*).ttl$                         https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl [R=303,L]
         RewriteRule ^/def/project(.*)$                             https://raw.githack.com/dr-shorthair/project-ont/gh-pages/docs/index.html [R=303,L]
+
+
+        # http://linked.data.gov.au/def/su
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/su/ont(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/su.ttl [R=303,L]
+        RewriteRule ^/def/su/ont(.*).ttl$                         https://raw.githack.com/surroundaustralia/su-ont/master/su.ttl [R=303,L]
+        RewriteRule ^/def/su/ont(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/su.html [R=303,L]
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/su(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
+        RewriteRule ^/def/su(.*).ttl$                         https://raw.githack.com/surroundaustralia/su-ont/master/profile.ttl [R=303,L]
+        RewriteRule ^/def/su(.*)$                             https://raw.githack.com/surroundaustralia/su-ont/master/profile.html [R=303,L]
+
+
+
+
+
 
         #
         #	Vocabularies
