--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -268,4 +268,8 @@
         # AGRIF Ontology - HTML (catch-all)
         RewriteRule ^/def/agrif(.*)$ http://www.linked.data.gov.au/def/agrif$1 [R=302,L]
 
+#	RewriteCond %{QUERY_STRING} _profile=(\w+) [OR]
+#	RewriteCond %{QUERY_STRING} _mediatype=(\w+)
+#	RewriteRule ^/def/phs/voc/obsMethodsHash(.*)$ http://frag.surroundaustralia.com/object?uri=http://%{SERVER_NAME}$0&_profile=%1&_mediatype=%2 [R=302,L]
+	RewriteRule ^/def/phs/voc/obsMethodsHash$ http://frag.surroundaustralia.com/object?uri=http://%{SERVER_NAME}$0 [R=302,L]
 </VirtualHost>
