added /def$ for environment

--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -1032,8 +1032,9 @@
 
 	# legacy defs properties from eReefs
 	#
-	RewriteRule ^/def/property(.*) http://registry2.it.csiro.au/def/property$1
-	RewriteRule ^/def/feature(.*) http://registry2.it.csiro.au/def/feature$1
-	RewriteRule ^/def/object(.*) http://registry2.it.csiro.au/def/object$1
-	
+	RewriteRule ^/def/property(.*) http://registry2.it.csiro.au/def/property$1 [L]
+	RewriteRule ^/def/feature(.*) http://registry2.it.csiro.au/def/feature$1 [L]
+	RewriteRule ^/def/object(.*) http://registry2.it.csiro.au/def/object$1 [L]
+
+	RewriteRule ^/def$ http://registry2.it.csiro.au/def [L]
 </VirtualHost>
