--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -202,7 +202,7 @@
 
         # http://linked.data.gov.au/dataset/placenames
         # Dataset
-	RewriteRule ^/dataset/placenames(.*)$ http://fsdf.org.au/placenames-dataset$1 [R=302,L]
+	RewriteRule ^/dataset/placenames(.*)$ http://fsdf.org.au/dataset/placenames$1 [R=302,L]
 
         # http://linked.data.gov.au/dataset/ausplots
         # Turtle
@@ -614,14 +614,34 @@
                 Header always set ExpiresDefault "access plus 10 minutes"
         # </Location>
 
-        RewriteRule ^/dataset/mb16mb11				https://github.com/CSIRO-enviro-informatics/mb16mb11-linkset [L,R=302]	
+	RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/mb16mb11				https://raw.githack.com/CSIRO-enviro-informatics/mb16mb11-linkset/master/header.ttl [L,R=302]
+	RewriteRule ^/dataset/mb16mb11				https://github.com/CSIRO-enviro-informatics/mb16mb11-linkset [L,R=302]	
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+	RewriteRule ^/dataset/mb16cc				https://raw.githack.com/CSIRO-enviro-informatics/mb16cc-linkset/master/header.ttl [L,R=302]
         RewriteRule ^/dataset/mb16cc				https://github.com/CSIRO-enviro-informatics/mb16cc-linkset [L,R=302]
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/addr1605mb11			https://raw.githack.com/CSIRO-enviro-informatics/addr1605mb11-linkset/master/header.ttl [L,R=302]
 	RewriteRule ^/dataset/addr1605mb11			https://github.com/CSIRO-enviro-informatics/addr1605mb11-linkset [L,R=302]
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/addr1605mb16			https://raw.githack.com/CSIRO-enviro-informatics/addr1605mb16-linkset/master/header.ttl [L,R=302]
         RewriteRule ^/dataset/addr1605mb16			https://github.com/CSIRO-enviro-informatics/addr1605mb16-linkset [L,R=302]
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/addrmb11				https://raw.githack.com/CSIRO-enviro-informatics/addrmb11-linkset/master/header.ttl [L,R=302]
         RewriteRule ^/dataset/addrmb11				https://github.com/CSIRO-enviro-informatics/addrmb11-linkset [L,R=302]
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/addrmb16				https://raw.githack.com/CSIRO-enviro-informatics/addrmb16-linkset/master/header.ttl [L,R=302]
         RewriteRule ^/dataset/addrmb16				https://github.com/CSIRO-enviro-informatics/addrmb16-linkset [L,R=302]
+        RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/dataset/addrcatch				https://raw.githack.com/CSIRO-enviro-informatics/addrcatch-linkset/master/header.ttl [L,R=302]
         RewriteRule ^/dataset/addrcatch				https://github.com/CSIRO-enviro-informatics/addrcatch-linkset [L,R=302]
-
 
 	ProxyPreserveHost On
 
