--- a/conf/environment.data.gov.au.conf
+++ b/conf/environment.data.gov.au.conf
@@ -1035,6 +1035,9 @@
 	RewriteRule ^/def/property(.*) http://registry2.it.csiro.au/def/property$1 [L]
 	RewriteRule ^/def/feature(.*) http://registry2.it.csiro.au/def/feature$1 [L]
 	RewriteRule ^/def/object(.*) http://registry2.it.csiro.au/def/object$1 [L]
+	RewriteRule ^/def/op(.*) http://registry2.it.csiro.au/def/op$1 [L]
+	RewriteRule ^/def/quantity-kind(.*) http://registry2.it.csiro.au/def/quantity-kind$1 [L]
+	RewriteRule ^/def/unit(.*) http://registry2.it.csiro.au/def/unit$1 [L]
 
 	RewriteRule ^/def$ http://registry2.it.csiro.au/def [L]
 </VirtualHost>
