--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -530,10 +530,13 @@
 
         # http://linked.data.gov.au/def/project
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+	RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/project(.*)$                             https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl [R=303,L]
-        RewriteRule ^/def/project(.*).ttl$                         https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl [R=303,L]
-        RewriteRule ^/def/project(.*)$                             https://raw.githack.com/dr-shorthair/project-ont/gh-pages/docs/index.html [R=303,L]
+        RewriteRule ^/def/project(.*)$                          https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl [R=303,L]
+        RewriteRule ^/def/project(.*).ttl$                      https://raw.githack.com/dr-shorthair/project-ont/gh-pages/rdf/project.ttl [R=303,L]
+	RewriteRule ^/def/project/?$				https://dr-shorthair.github.io/project-ont/docs/ [R=302,L]  
+	RewriteMap tolower int:tolower
+        RewriteRule ^/def/project(.*)$                          https://dr-shorthair.github.io/project-ont/docs/\#${tolower:$1} [R=302,L,NE]
 
 
         # http://linked.data.gov.au/def/su
