--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -12,6 +12,9 @@
         Options Includes FollowSymLinks MultiViews
 
 	RewriteRule ^/robots.txt /var/www/html/robots.txt [L]
+	
+	#	CORS
+	Header set Access-Control-Allow-Origin "*"
 
         #
         #	PIDs
