updated GA's VocPub profile URI

--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -391,12 +391,12 @@
         RewriteRule ^/def/fsdf(.*)$                             https://raw.githack.com/GeoscienceAustralia/fsdf-ont/master/fsdf.html$1 [R=302,L]
 
 	# GA's SKOS Profile
-        RewriteRule /def/ga-skos/invalid.1.ttl			https://raw.githack.com/surroundaustralia/ga-skos-profile/master/examples/invalid.1.ttl [R=302,L]
-        RewriteRule /def/ga-skos/invalid.2.ttl			https://raw.githack.com/surroundaustralia/ga-skos-profile/master/examples/invalid.2.ttl [R=302,L]
-        RewriteRule /def/ga-skos/valid.ttl			https://raw.githack.com/surroundaustralia/ga-skos-profile/master/examples/valid.ttl [R=302,L]
-	RewriteRule /def/ga-skos/validation.ttl			https://raw.githack.com/surroundaustralia/ga-skos-profile/master/validation.ttl [R=302,L]
-	RewriteRule /def/ga-skos/specification.html		https://raw.githack.com/surroundaustralia/ga-skos-profile/master/specification.html [R=302,L]
-	RewriteRule /def/ga-skos$				https://raw.githack.com/surroundaustralia/ga-skos-profile/master/ga-skos.html [R=302,L]
+        RewriteRule /def/ga-vocpub/invalid.1.ttl		https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/examples/invalid.1.ttl [R=302,L]
+        RewriteRule /def/ga-vocpub/invalid.2.ttl		https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/examples/invalid.2.ttl [R=302,L]
+        RewriteRule /def/ga-vocpub/valid.ttl			https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/examples/valid.ttl [R=302,L]
+	RewriteRule /def/ga-vocpub/validation.ttl		https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/validation.ttl [R=302,L]
+	RewriteRule /def/ga-vocpub/specification.html		https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/specification.html [R=302,L]
+	RewriteRule /def/ga-vocpub$				https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/profile.html [R=302,L]
 
 	# http://linked.data.gov.au/def/geofeatures
 	include /etc/apache2/sites-available/def-geofeatures.conf
