--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -274,11 +274,17 @@
         #
 
         # http://linked.data.gov.au/def/agop
+	RewriteRule ^/def/agop/spec$			       https://raw.githack.com/AGLDWG/agop/master/specification.html [R=302,L]
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/agop(.*)$                            https://raw.githack.com/AGLDWG/agop/master/profile.ttl? [R=302,L]
-        RewriteRule ^/def/agop(.*).ttl$                        https://raw.githack.com/AGLDWG/agop/master/profile.ttl [R=302,L]
-        RewriteRule ^/def/agop(.*)$                            https://github.com/AGLDWG/agop [R=302,L]
+        RewriteRule ^/def/agop$                                https://raw.githack.com/AGLDWG/agop/master/agop.ttl? [R=302,L]
+        RewriteRule ^/def/agop.ttl$                            https://raw.githack.com/AGLDWG/agop/master/agop.ttl [R=302,L]
+        RewriteRule ^/def/agop$                                https://raw.githack.com/AGLDWG/agop/master/agop.html [R=302,L]
+	RewriteRule ^/def/agop/validator$		       https://raw.githack.com/AGLDWG/agop/master/validator.shacl.ttl [R=302,L]
+	RewriteRule ^/def/agop/example.valid-1$                https://raw.githack.com/AGLDWG/agop/master/example.valid-1.ttl [R=302,L]
+	RewriteRule ^/def/agop/example.valid-2$                https://raw.githack.com/AGLDWG/agop/master/example.valid-2.ttl [R=302,L]
+	RewriteRule ^/def/agop/example.invalid-1$              https://raw.githack.com/AGLDWG/agop/master/example.invalid-1.ttl [R=302,L]
+	RewriteRule ^/def/agop/example.invalid-2$              https://raw.githack.com/AGLDWG/agop/master/example.invalid-2.ttl [R=302,L]
 
         # http://linked.data.gov.au/def/agrif
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
