--- a/conf/test.linked.data.gov.au.conf
+++ b/conf/test.linked.data.gov.au.conf
@@ -9,6 +9,11 @@
         ServerName test.linked.data.gov.au
 
         RewriteEngine  on
+        LogLevel warn rewrite:trace3
+        ErrorLog ${APACHE_LOG_DIR}/test.linked.data.gov.au/error.log
+        CustomLog ${APACHE_LOG_DIR}/test.linked.data.gov.au/access.log combined
+
+
 
 	# LongSpine Onts
 
@@ -173,26 +178,6 @@
         # HTML just to GitHub main entry point
         RewriteRule ^/dataset/gpclgpc https://github.com/nicholascar/gpclgpc-linkset
 
-	# LongSpine Linksets
-
-        # # AAO Dataset 
-        # # call for the RDF version of the ont to the ttl file
-        # RewriteRule ^/dataset/aao.ttl https://raw.githubusercontent.com/nicholascar/gpclgpc-linkset/master/gpclgpc.ttl [R=302,L]
-        # RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
-        # RewriteCond %{HTTP:Accept} text/turtle [NC]
-        # RewriteRule ^/dataset/gpclgpc https://raw.githubusercontent.com/nicholascar/gpclgpc-linkset/master/gpclgpc.ttl [R=302,L]
-        # # HTML just to GitHub main entry point
-        # RewriteRule ^/dataset/gpclgpc https://github.com/nicholascar/gpclgpc-linkset
-
-        # # AGOR Dataset 
-        # # call for the RDF version of the ont to the ttl file
-        # RewriteRule ^/dataset/aao.ttl https://raw.githubusercontent.com/nicholascar/gpclgpc-linkset/master/gpclgpc.ttl [R=302,L]
-        # RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
-        # RewriteCond %{HTTP:Accept} text/turtle [NC]
-        # RewriteRule ^/dataset/gpclgpc https://raw.githubusercontent.com/nicholascar/gpclgpc-linkset/master/gpclgpc.ttl [R=302,L]
-        # # HTML just to GitHub main entry point
-        # RewriteRule ^/dataset/gpclgpc https://github.com/nicholascar/gpclgpc-linkset
-
         # CRS Test Dataset 
         # call for the RDF version of the ont to the ttl file
         RewriteRule ^/dataset/crs.ttl https://github.com/CSIRO-enviro-informatics/crs-dataset-test/blob/master/data/all.ttl [R=302,L]
@@ -201,15 +186,6 @@
         RewriteRule ^/dataset/crs https://github.com/CSIRO-enviro-informatics/crs-dataset-test/blob/master/data/all.ttl [R=302,L]
         # HTML just to GitHub main entry point
         RewriteRule ^/dataset/crs https://github.com/CSIRO-enviro-informatics/crs-dataset-test
-
-        # # PBS Dataset 
-        # # call for the RDF version of the ont to the ttl file
-        # RewriteRule ^/dataset/crs.ttl https://github.com/CSIRO-enviro-informatics/crs-dataset-test/blob/master/data/all.ttl [R=302,L]
-        # RewriteCond %{QUERY_STRING} _format=text/turtle [OR]
-        # RewriteCond %{HTTP:Accept} text/turtle [NC]
-        # RewriteRule ^/dataset/crs https://github.com/CSIRO-enviro-informatics/crs-dataset-test/blob/master/data/all.ttl [R=302,L]
-        # # HTML just to GitHub main entry point
-        # RewriteRule ^/dataset/crs https://github.com/CSIRO-enviro-informatics/crs-dataset-test        
 
         #
         #       Top-level registers
@@ -272,4 +248,30 @@
 #	RewriteCond %{QUERY_STRING} _mediatype=(\w+)
 #	RewriteRule ^/def/phs/voc/obsMethodsHash(.*)$ http://frag.surroundaustralia.com/object?uri=http://%{SERVER_NAME}$0&_profile=%1&_mediatype=%2 [R=302,L]
 	RewriteRule ^/def/phs/voc/obsMethodsHash$ http://frag.surroundaustralia.com/object?uri=http://%{SERVER_NAME}$0 [R=302,L]
+
+
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/community/loop3d$           https://raw.githack.com/qudt/qudt-public-repo/master/community/loop3d/profile.ttl [R=302,L]
+RewriteRule ^/community/loop3d.ttl$       https://raw.githack.com/qudt/qudt-public-repo/master/community/loop3d/profile.ttl [R=302,L]
+RewriteRule ^/community/loop3d$           https://raw.githack.com/qudt/qudt-public-repo/master/community/loop3d/profile.html [R=302,L]
+
+RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+RewriteCond %{HTTP:Accept} text/turtle [NC]
+RewriteRule ^/community/loop3d/voc$       https://raw.githack.com/qudt/qudt-public-repo/master/community/loop3d/voc.ttl [R=302,L]
+RewriteRule ^/community/loop3d/voc.ttl$   https://raw.githack.com/qudt/qudt-public-repo/master/community/loop3d/voc.ttl [R=302,L]
+RewriteRule ^/community/loop3d/voc$       https://raw.githack.com/qudt/qudt-public-repo/master/community/loop3d/voc.html [R=302,L]
+
+DocumentRoot /var/www/test
+
+Alias "/ccc"       "/var/www/test/ccc"
+<Directory "/var/www/test/ccc">
+#    Require all granted
+    DirectoryIndex index.html
+    Options Indexes FollowSymLinks
+    AllowOverride All
+</Directory>
+
+RewriteRule ^/goo$       https://www.google.com.au [R=302,L]
+
 </VirtualHost>
