fixes due to IRI mapping validator results

--- a/conf/0-linked.data.gov.au-le-ssl.conf
+++ b/conf/0-linked.data.gov.au-le-ssl.conf
@@ -165,9 +165,9 @@
         # Dataset
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/dataset/qldgeofeatures$                        https://gsq.cat/qldgeofeatures/index.ttl? [R=302,L]
-        RewriteRule ^/dataset/qldgeofeatures.ttl$                    https://gsq.cat/qldgeofeatures/index.ttl [R=302,L]
-        RewriteRule ^/dataset/qldgeofeatures$                        https://gsq.cat/qldgeofeatures  [R=302,L]
+        RewriteRule ^/dataset/qldgeofeatures$                        https://raw.githubusercontent.com/geological-survey-of-queensland/qldgeofeatures-dataset/master/_data/features.ttl? [R=302,L]
+        RewriteRule ^/dataset/qldgeofeatures.ttl$                    https://raw.githubusercontent.com/geological-survey-of-queensland/qldgeofeatures-dataset/master/_data/features.ttl [R=302,L]
+        RewriteRule ^/dataset/qldgeofeatures$                        https://github.com/geological-survey-of-queensland/qldgeofeatures-dataset [R=302,L]
         # Collections
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -264,7 +264,7 @@
         # .owl file extension
         RewriteRule ^\/dataset\/ausplots\/(.+).owl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
         # HTML
-        RewriteRule ^/dataset/ausplots/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots/$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
+        RewriteRule ^/dataset/ausplots(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/ausplots$1&sparql=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
 
         # http://linked.data.gov.au/dataset/corveg
         # Dataset
@@ -296,7 +296,7 @@
         # .owl file extension
         RewriteRule ^\/dataset\/corveg\/(.+).owl$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots&output=text/turtle [R=302,L]
         # HTML
-        RewriteRule ^\/dataset\/corveg\/(.+)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg/$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
+        RewriteRule ^\/dataset\/corveg(.*)$ https://lodview.it/lodview/?IRI=http://linked.data.gov.au/dataset/corveg$1\&sparql=https://graphdb.tern.org.au/repositories/ecoplots [R=302,L]
         
         #
         #	Ontologies
@@ -611,14 +611,14 @@
         RewriteRule ^/def/ausplots-cv$                          https://linkeddata.tern.org.au/viewer/tern/download [R=302,L]
         RewriteRule ^/def/ausplots-cv$                          https://linkeddata.tern.org.au/viewer/tern/ [R=302,L]
         RewriteRule ^/def/ausplots-cv(.*)$                      http://linkeddata.tern.org.au/viewer/ausplots/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
-	    RewriteRule ^/def/tern-cv/$                             http://linkeddata.tern.org.au/viewer/tern/vocabulary/ [R=302,L]
-	    RewriteRule ^/def/tern-cv(.*)$                          http://linkeddata.tern.org.au/viewer/tern/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
+	RewriteRule ^/def/tern-cv/$                             http://linkeddata.tern.org.au/viewer/tern/vocabulary/ [R=302,L]
+	RewriteRule ^/def/tern-cv(.*)$                          http://linkeddata.tern.org.au/viewer/tern/id/http://%{SERVER_NAME}%{REQUEST_URI} [R=302,L]
 
         # Multiple Vocabs: TERN's CorVeg
         # http://linked.data.gov.au/def/corveg-cv
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
-        RewriteRule ^/def/corveg-cv$ 							https://linkeddata.tern.org.au/viewer/corveg/download [R=302,L]
+        RewriteRule ^/def/corveg-cv$                            https://linkeddata.tern.org.au/viewer/corveg/download [R=302,L]
         RewriteRule ^/def/corveg-cv$                            http://linkeddata.tern.org.au/viewer/corveg/ [R=302,L] 
         RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC] 
