--- a/conf/linked.data.gov.au-ontologies.conf
+++ b/conf/linked.data.gov.au-ontologies.conf
@@ -78,12 +78,35 @@
         # http://linked.data.gov.au/def/borehole
         # all requests for RDF (tutle) just go to the single RDF file
         # requests for .../borehole/... go to .../borehole#...
-	    RewriteRule ^/def/borehole-design(.*)$                  https://vocabs.gsq.digital/vocabulary/borehole-design [R=302,L]
-	    RewriteRule ^/def/borehole-drilling-method(.*)$         https://vocabs.gsq.digital/vocabulary/borehole-drilling-method [R=302,L]
-	    RewriteRule ^/def/borehole-purpose(.*)$                 https://vocabs.gsq.digital/vocabulary/borehole-purpose [R=302,L]
-	    RewriteRule ^/def/borehole-start-point(.*)$             https://vocabs.gsq.digital/vocabulary/borehole-start-point [R=302,L]
-	    RewriteRule ^/def/borehole-status-event(.*)$            https://vocabs.gsq.digital/vocabulary/borehole-status-event [R=302,L]
-	    RewriteRule ^/def/borehole-sub-purpose(.*)$             https://vocabs.gsq.digital/vocabulary/borehole-sub-purpose [R=302,L]
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/borehole-design(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-design&uri=http://linked.data.gov.au/def/borehole-design$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/borehole-design(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-design&uri=http://linked.data.gov.au/def/borehole-design$1" [R=302,NE,L]
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/borehole-drilling-method(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-drilling-method&uri=http://linked.data.gov.au/def/borehole-drilling-method$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/borehole-drilling-method(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-drilling-method&uri=http://linked.data.gov.au/def/borehole-drilling-method$1" [R=302,NE,L]
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/borehole-purpose(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-purpose\&uri=http://linked.data.gov.au/def/borehole-purpose$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/borehole-purpose(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-purpose\&uri=http://linked.data.gov.au/def/borehole-purpose$1" [R=302,NE,L]
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/borehole-start-point(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-start-point&uri=http://linked.data.gov.au/def/borehole-start-point$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/borehole-start-point(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-start-point&uri=http://linked.data.gov.au/def/borehole-start-point$1" [R=302,NE,L]
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/borehole-status-event(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-status-event&uri=http://linked.data.gov.au/def/borehole-status-event$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/borehole-status-event(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-status-event&uri=http://linked.data.gov.au/def/borehole-status-event$1" [R=302,NE,L]
+
+        RewriteCond %{QUERY_STRING} ^_mediatype=text/turtle$ [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/borehole-sub-purpose(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-sub-purpose&uri=http://linked.data.gov.au/def/borehole-sub-purpose$1&_mediatype=text/turtle" [R=302,L]
+        RewriteRule ^/def/borehole-sub-purpose(.*)$ "https://vocabs.gsq.digital/object?vocab_id=borehole-sub-purpose&uri=http://linked.data.gov.au/def/borehole-sub-purpose$1" [R=302,NE,L]        
 
         RewriteCond %{QUERY_STRING} ^_format=text/turtle$ [OR]
         RewriteCond %{HTTP:Accept} text/turtle [NC]
@@ -145,8 +168,83 @@
 	RewriteRule /def/ga-vocpub$				https://raw.githack.com/surroundaustralia/ga-vocpub-profile/master/profile.html [R=302,L]
 
 
-	# http://linked.data.gov.au/def/geofeatures
-	Include /etc/apache2/sites-available/def-geofeatures.conf
+        # http://linked.data.gov.au/def/geofeatures
+        #   Profiles: alt, skos, owl
+        #   Media Types: HTML, RDF (turtle)
+
+        # profile: Alt, meadiatype: turtle
+        RewriteCond %{QUERY_STRING} _profile=alt
+        RewriteCond %{QUERY_STRING} _mediatype=text/turtle
+        RewriteRule ^/def/geofeatures(.*)$                      https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/profiles.ttl? [R=302,L]
+        RewriteCond %{QUERY_STRING} _profile=http://www.w3.org/ns/dx/conneg/altr
+        RewriteCond %{QUERY_STRING} _mediatype=text/turtle
+        RewriteRule ^/def/geofeatures(.*)$                      https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/profiles.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept-Profile} \<http://www.w3.org/ns/dx/conneg/altr\> [NC]
+        RewriteCond %{QUERY_STRING} _mediatype=text/turtle
+        RewriteRule ^/def/geofeatures(.*)$                      https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/profiles.ttl? [R=302,L]
+        RewriteCond %{QUERY_STRING} _profile=alt
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geofeatures(.*)$                      https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/profiles.ttl? [R=302,L]
+        RewriteCond %{QUERY_STRING} _profile=http://www.w3.org/ns/dx/conneg/altr
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geofeatures(.*)$                      https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/profiles.ttl? [R=302,L]
+        RewriteCond %{HTTP:Accept-Profile} \<http://www.w3.org/ns/dx/conneg/altr\> [NC]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geofeatures(.*)$                      https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/profiles.ttl? [R=302,L]
+
+        RewriteCond %{QUERY_STRING} _profile=alt [OR]
+        RewriteCond %{QUERY_STRING} _profile=http://www.w3.org/ns/dx/conneg/altr [OR]
+        RewriteCond %{HTTP:Accept-Profile} \<http://www.w3.org/ns/dx/conneg/altr\> [NC]
+        RewriteRule ^/def/geofeatures.ttl(.*)$                  https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/profiles.ttl? [R=302,L]
+
+
+        # profile: Alt, mediatype: (default) HTML
+        RewriteCond %{QUERY_STRING} _profile=alt [OR]
+        RewriteCond %{QUERY_STRING} _profile=http://www.w3.org/ns/dx/conneg/altr [OR]
+        RewriteCond %{HTTP:Accept-Profile} \<http://www.w3.org/ns/dx/conneg/altr\> [NC]
+        RewriteRule ^/def/geofeatures(.*)$                      https://github.com/geological-survey-of-queensland/geofeatures-ont/blob/master/profiles.md? [R=302,L]
+
+        # profile: SKOS, meadiatype: turtle
+        RewriteCond %{QUERY_STRING} _profile=skos
+        RewriteCond %{QUERY_STRING} _mediatype=text/turtle
+        RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+        RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/skos-reference/
+        RewriteCond %{QUERY_STRING} _mediatype=text/turtle
+        RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+        RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/skos-reference/\> [NC]
+        RewriteCond %{QUERY_STRING} _mediatype=text/turtle
+        RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+        RewriteCond %{QUERY_STRING} _profile=skos
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+        RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/skos-reference/
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+        RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/skos-reference/\> [NC]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle
+
+        RewriteCond %{QUERY_STRING} _profile=skos [OR]
+        RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/skos-reference/ [OR]
+        RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/skos-reference/\> [NC]
+        RewriteRule ^/def/geofeatures.ttl(.*)$                 https://vocabs.gsq.digital/vocabulary/geofeatures?_profile=skos\&_mediatype=text/turtle [R=302,L]
+
+        # profile:SKOS, mediatype: (default) HTML
+        RewriteCond %{QUERY_STRING} _profile=skos [OR]
+        RewriteCond %{QUERY_STRING} _profile=https://www.w3.org/TR/skos-reference/ [OR]
+        RewriteCond %{HTTP:Accept-Profile} \<https://www.w3.org/TR/skos-reference/\> [NC]
+        RewriteRule ^/def/geofeatures(.*)$                      https://vocabs.gsq.digital/vocabulary/geofeatures? [R=302,L]
+
+        # profile: OWL, mediatype: turtle
+        RewriteCond %{QUERY_STRING} _mediatype=text/turtle [OR]
+        RewriteCond %{HTTP:Accept} text/turtle [NC]
+        RewriteRule ^/def/geofeatures(.*)$                      https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/geofeatures.ttl? [R=302,L]
+        RewriteRule ^/def/geofeatures.ttl(.*)$                  https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/geofeatures.ttl? [R=302,L]
+
+        # profile: OWL, mediatype: (default) HTML
+        RewriteMap lc int:tolower 
+        RewriteRule ^/def/geofeatures/(.*)$                      https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/geofeatures.html#${lc:$1} [R=302,L,NE]
+        RewriteRule ^/def/geofeatures(.*)$                      https://raw.githack.com/geological-survey-of-queensland/geofeatures-ont/master/geofeatures.html$1 [R=302,L]
 
 
         # http://linked.data.gov.au/def/geoqk
